# yaww

./: 1.txt  Cargo.toml  Makefile  README.md  halts1.txt  halts2.txt  halts3.txt  halts4.txt  halts5.txt  hangs1.txt  hangs2.txt  how-yaww-works.txt  yaww.toml
examples/: async.rs  basic.rs
safer-wingui/: Cargo.toml
safer-wingui/src/: abort.rs  automatically_generated.rs  cow.rs  devmode.rs  error.rs  lib.rs  pointer_info.rs  special_param.rs  variable_size.rs  wide_strlen.rs
src/: bitmap.rs  brush.rs  color.rs  cursor.rs  d2d1.rs  dc.rs  error.rs  event.rs  future.rs  gdiobj.rs  glrc.rs  icon.rs  key.rs  lib.rs  menu.rs  monitor.rs  pen.rs  ptr.rs  refcell.rs  server.rs  task-old.rs  task.rs  util.rs  vkey.rs  window.rs  window_class.rs  window_data.rs  wndproc.rs
src/directive/: .process.rs.swp  mod.rs  process.rs
src/gui_thread/: message.rs  mod.rs  process.rs  provider.rs  thread.rs
src/server/: mod.rs  thread.rs
src/window/: cls.rs  mod.rs
src/wndproc/: event.rs  mod.rs
vkey/: Cargo.toml  vkey.json
vkey/src/: main.rs
yaww/: Cargo.toml
yaww-generator/: Cargo.toml
yaww-generator/src/: config.rs  main.rs  types.rs
yaww-generator/src/types/: derives.rs  item.rs  mod.rs  structure.rs  ty.rs
yaww/src/: abort.rs  automatically_generated.rs  cow.rs  error.rs  lib.rs  strlen.rs  variable_size.rs
yaww/src/manual_types/: devmode.rs  mod.rs  pointer_info.rs  special_param.rs
