[package]
name = "yaww"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
bitflags = "1.2.1"
flume = { version = "0.10", default-features = false }
log = "0.4"
once_cell = "1.5.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "minwindef", "processthreadsapi", "winbase", "windef", "wingdi", "winuser"]

[dev-dependencies]
const-cstr = "0.3.0"
env_logger = { version = "0.8.2", default-features = false, features = ["atty", "termcolor"] }

[features]
default = []
