[package]
name = "yaww"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
bitflags = "1.2.1"
breadthread = { path = "../breadthread" }
flume = { version = "0.10", default-features = false }
gluten-keyboard = "0.1"
log = "0.4"
once_cell = "0.1.8"
orphan-crippler = "0.1.5"
tinyvec = "1.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "minwindef", "processthreadsapi", "winbase", "windef", "wingdi", "winuser"]

[dev-dependencies]
const-cstr = "0.3.0"
env_logger = { version = "0.8.2", default-features = false, features = ["atty", "termcolor"] }

[features]
default = []
direct2d = ["winapi/d2d1", "winapi/unknwnbase"]
parking_lot = ["breadthread/pl", "once_cell/parking_lot", "orphan-crippler/parking_lot"]
