[package]
name = "safer-wingui"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
cstr_core = { version = "0.2.5", default-features = false }
memchr = { version = "2.5.0", default-features = false }

[dependencies.windows-sys]
# windows-sys is unstable, pin to exact version
version = "=0.36.1"
features = [
    "Win32_Foundation", 
    "Win32_System_Registry", 
    "Win32_Graphics_Gdi", 
    "Win32_UI_Input_Pointer", 
    "Win32_UI_Controls", 
    "Win32_UI_Shell", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System_LibraryLoader", 
    "Win32_Graphics_OpenGL"
]

[features]
default = ["std"]
std = ["alloc", "memchr/std"]
alloc = ["cstr_core/alloc"]
