[package]
name = "yaww-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
glob = "0.3.0"
heck = "0.4.0"
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
windows-metadata = "^0.37.0"
